# riskoracle

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.jupyter  Makefile  Makefile-Large  Makefile-small  README.md  conda-requirements.txt  docker-compose.yml  environment.yml  pyproject.toml  recovery-procedure.md  requirements-dev.txt  requirements.txt  test_feature_retrieval.py  test_inference.py  test_request.json
.github/workflows/: ml-pipeline.yml
docs/: high-level.md  step-10.md
docs/api/: overview.md
docs/architecture/: overview.md
docs/runbooks/: incident-response.md
infrastructure/keda/: ml-platform-scalers.yaml
infrastructure/terraform/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infrastructure/terraform/environments/prod/: backend.tf  main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/databases/: outputs-redis.tf  redis.tf  variables-redis.tf
infrastructure/terraform/modules/kubernetes/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/providers/aws/: main.tf  outputs.tf  variables.tf
kubernetes/base/: kustomization.yaml  network-policies.yaml
kubernetes/base/namespaces/: ml-platform.yaml  monitoring.yaml  security.yaml
kubernetes/base/service-accounts/: mlflow.yaml
kubernetes/overlays/dev/: .env.secret  kustomization.yaml
kubernetes/overlays/dev/configs/: database-config.yaml  redis-config.yaml  s3-config.yaml
kubernetes/overlays/dev/ml-platform/: ingress.yaml  jupyter-deployment.yaml  kustomization.yaml  mlflow-deployment.yaml
kubernetes/overlays/dev/patches/: replicas.yaml  resource-limits.yaml
kubernetes/overlays/prod/: .env.secret.prod  kustomization.yaml
kubernetes/overlays/prod/configs/: database-config-prod.yaml  production-config.yaml  s3-config-prod.yaml
kubernetes/overlays/prod/patches/: production-monitoring.yaml  production-resources.yaml  production-scale.yaml  production-security.yaml
ml/feast/: feature_store.yaml
ml/feast/feature_repo/: data_sources.py  entities.py  feature_views.py  generate_sample_data.py  materialize.py
ml/kubeflow/pipelines/: fraud-detection-pipeline.py
ml/mlflow/: configure.py
ml/mlflow/projects/fraud-detection/: MLproject  conda.yaml  train.py
ml/serving/kserve/: fraud-detection-inferenceservice.yaml
notebooks/: getting-started.ipynb
ops/monitoring/grafana/dashboards/: ml-platform.json
ops/monitoring/prometheus/: prometheus.yml
ops/monitoring/prometheus/alerts/: ml-platform.yml
scripts/: deploy-full-production.sh  deploy-platform.sh  deploy-production.sh  disaster-recovery-plan.sh  init-db.sql  project_structure.sh  setup-cert-manager.sh  setup-jaeger-tracing.sh  setup-production-monitoring.sh  setup-vault-production.sh  verify-platform.sh
security/policies/opa/: ml-platform-labels-constraint.yaml  no-privileged-containers.yaml  required-labels.yaml
security/vault/: ml-platform-policy.hcl  values.yaml
src/python/feature-service/: Dockerfile  requirements.txt
src/python/feature-service/src/api/: app.py
src/python/feature-service/src/cache/: advanced_cache.py
src/python/ml-service/: Dockerfile  Dockerfile.dev  requirements.txt  setup.py
src/python/ml-service/src/api/: app.py
src/python/model-monitoring/src/api/: app.py
