# pyproject.toml
[project]
name = "ml-platform"
version = "0.1.0"
description = "Enterprise Machine Learning Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    # Core Data Science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    
    # ML Frameworks
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    
    # ML Tools
    "mlflow>=2.4.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    
    # Data Processing
    "pyarrow>=12.0.0",
    "dask>=2023.8.0",
    
    # API & Web
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    
    # Database & Cache
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    
    # Infrastructure
    "boto3>=1.34.0",
    
    # Jupyter (moved from dev to main since it's commonly used)
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    
    # Observability
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.18.0",
]

[project.optional-dependencies]
# Feature-based optional dependencies
aws = [
    "boto3>=1.34.0",
    "awscli>=1.29.0",
    "s3fs>=2023.10.0",
]

gcp = [
    "google-cloud-storage>=2.10.0",
    "google-cloud-bigquery>=3.12.0",
    "gcsfs>=2023.10.0",
]

azure = [
    "azure-storage-blob>=12.18.0",
    "azure-identity>=1.13.0",
]

spark = [
    "pyspark>=3.4.0",
]

feast = [
    "feast[aws]>=0.31.0",
]

streamlit = [
    "streamlit>=1.28.0",
]

# Development dependencies
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.5.0",
    
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.5",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.23.0",
    
    # Jupyter extensions
    "jupyterlab-code-formatter>=1.5.0",
    "jupyterlab-lsp>=5.0.0",
    
    # Notebook utilities
    "papermill>=2.4.0",
    "nbconvert>=7.4.0",
    
    # Type stubs
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0",
    
    # Tools for ML
    "great-expectations>=0.18.0",
    "evidently>=0.4.0",
    "polars>=0.19.0",
]

notebooks = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "plotly>=5.15.0",
    "jupyterlab-code-formatter>=1.5.0",
]

mlops = [
    "mlflow>=2.4.0",
    "kfp>=2.0.0",
    "evidently>=0.4.0",
    "tritonclient[all]>=2.34.0",
]

databricks = [
    "databricks-cli>=0.17.0",
    "databricks-sql-connector>=2.9.0",
]

snowflake = [
    "snowflake-connector-python>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ml-platform"
Documentation = "https://github.com/yourusername/ml-platform/docs"
Repository = "https://github.com/yourusername/ml-platform"
Issues = "https://github.com/yourusername/ml-platform/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
force_sort_within_sections = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=mlplatform --cov-report=html --cov-report=xml"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"