[project]
name = "ml-platform"
version = "0.1.0"
description = "Enterprise Machine Learning Platform with Production-Grade MLOps"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@company.com"}
]
requires-python = ">=3.10"
dependencies = [
    # Core Data Science
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "polars>=0.20.0",  # Faster alternative to pandas
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    
    # ML Frameworks
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "catboost>=1.2.0",
    
    # Deep Learning (optional but common)
    "torch>=2.1.0",
    "transformers>=4.35.0",
    
    # Feature Store
    "feast>=0.34.0",
    "redis>=5.0.0",
    
    # Experiment Tracking
    "mlflow>=2.8.0",
    "optuna>=3.4.0",  # Hyperparameter optimization
    
    # Data Validation
    "great-expectations>=0.18.0",
    "pandera>=0.17.0",  # DataFrame validation
    
    # API & Web
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Async Processing
    "celery>=5.3.0",
    "dramatiq>=1.14.0",
    
    # Database & Cache
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "redis[hiredis]>=5.0.0",
    
    # Cloud & Storage
    "boto3>=1.34.0",
    "s3fs>=2023.10.0",
    "adlfs>=2023.10.0",  # Azure
    "gcsfs>=2023.10.0",  # GCP
    
    # Stream Processing
    "kafka-python>=2.0.0",
    "avro>=1.11.0",
    
    # Monitoring & Observability
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",  # Structured logging
    
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
# Cloud Provider Specific
aws = [
    "boto3>=1.34.0",
    "sagemaker>=2.200.0",
    "aws-lambda-powertools>=2.32.0",
]

gcp = [
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-bigquery>=3.12.0",
]

azure = [
    "azure-ai-ml>=1.12.0",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
]

# Distributed Computing
spark = [
    "pyspark>=3.5.0",
    "delta-spark>=3.0.0",
]

dask = [
    "dask[complete]>=2024.1.0",
    "distributed>=2024.1.0",
]

ray = [
    "ray[default]>=2.9.0",
    "ray[serve]>=2.9.0",
]

# Feature Stores
feast = [
    "feast[redis,aws,gcp,azure]>=0.34.0",
]

# Model Serving
triton = [
    "tritonclient[all]>=2.38.0",
]

kserve = [
    "kserve>=0.11.0",
]

bentoml = [
    "bentoml>=1.2.0",
]

# MLOps Platforms
kubeflow = [
    "kfp>=2.5.0",
    "kubeflow-training>=1.7.0",
]

mlflow-extras = [
    "mlflow[extras]>=2.8.0",
]

# Workflow Orchestration
airflow = [
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-cncf-kubernetes>=8.0.0",
]

prefect = [
    "prefect>=2.14.0",
]

# Monitoring
evidently = [
    "evidently>=0.4.7",
    "whylogs>=1.0.0",
]

# Visualization
visualization = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "streamlit>=1.29.0",
    "gradio>=4.0.0",
]

# Development & Testing
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.92.0",
    
    # Code Quality
    "ruff>=0.1.0",  # Fast linting
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.5",  # Security
    "safety>=2.3.0",  # Dependency security
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-monorepo-plugin>=1.1.0",
    
    # Jupyter
    "jupyterlab>=4.0.0",
    "jupyterlab-lsp>=5.0.0",
    "jupyterlab-code-formatter>=2.2.0",
    "ipywidgets>=8.1.0",
    "nbconvert>=7.14.0",
    "papermill>=2.5.0",
    
    # Debugging
    "ipdb>=0.13.0",
    "pdbpp>=0.10.0",
    
    # Profiling
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
    
    # Type Stubs
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
    "types-redis>=4.6.0",
]

# All-in-one for local development
all = [
    "ml-platform[aws,gcp,azure,spark,dask,ray,feast,triton,kserve,bentoml,kubeflow,mlflow-extras,airflow,prefect,evidently,visualization,dev]"
]

[project.scripts]
ml-platform-api = "ml_platform.inference.api.main:start"
ml-platform-train = "ml_platform.training.cli:train"
ml-platform-feast = "ml_platform.feature_store.cli:main"
ml-platform-monitor = "ml_platform.monitoring.cli:run"

[project.urls]
Homepage = "https://github.com/yourcompany/ml-platform"
Documentation = "https://docs.ml-platform.yourcompany.com"
Repository = "https://github.com/yourcompany/ml-platform"
Issues = "https://github.com/yourcompany/ml-platform/issues"
Changelog = "https://github.com/yourcompany/ml-platform/releases"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "ARG",     # flake8-unused-arguments
    "SIM",     # flake8-simplify
    "TCH",     # flake8-type-checking
    "RUF",     # ruff-specific rules
]
ignore = []
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "*.egg-info",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = false
strict_concatenate = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
    -ra 
    -q 
    --strict-markers 
    --strict-config 
    --tb=short
    --cov=ml_platform 
    --cov-report=term-missing 
    --cov-report=html
    --cov-report=xml
    --cov-fail-under=80
    --no-cov-on-fail
"""
testpaths = ["tests", "src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*", "*_test"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
    "security: marks tests as security tests",
    "smoke: marks tests as smoke tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/_version.py",
    "*/conftest.py",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "typing.cast",
    "except ImportError",
    "except ImportError:",
    "except ImportError as e:",
    "except ImportError as exc:",
    "except Exception:",
]
ignore_errors = true
precision = 2
skip_covered = true
skip_empty = true
sort = "Cover"

[build-system]
requires = [
    "setuptools>=69.0.0",
    "wheel>=0.42.0",
    "build>=1.0.0",
]
build-backend = "setuptools.build_meta"